# GTMForge

./: .env.template  .envexample  .gitignore  CLAUDE.md  Makefile  README.md  api.py  main.py  package.json  pyproject.toml  requirements.txt  start.sh  start_frontend.sh  start_real_apis.sh
app/: __init__.py
app/agents/: __init__.py  hello_im_an_agent.py
app/core/: base_agent.py  orchestrator.py  orchestrator_takes_a_nap.py  schemas.py  task_state.py
app/utils/: __init__.py  config.py  google_clients.py  (+2 more)
archive/: QUICK_START.md  api.py  install_deps.sh  pyproject.toml  requirements.txt  requirements_real_apis.txt  start.sh  start_frontend.sh  test_veo_banana.py
archive/app/: __init__.py  forge.py
archive/app/agents/: __init__.py
archive/app/agents/comparative_insight_agent/: __init__.py  agent.py
archive/app/agents/imagen_agent/: __init__.py  agent.py
archive/app/agents/pitch_writer_agent/: __init__.py  agent.py
archive/app/agents/publisher_agent/: __init__.py  agent.py
archive/app/agents/qa_agent/: agent.py
archive/app/agents/veo_agent/: __init__.py
archive/app/core/: __init__.py  orchestrator.py
archive/app/utils/: __init__.py  config.py  logger.py  real_api_clients.py
archive/output/images/: imagen_dreams_here.txt
archive/output/videos/: veo_makes_movies_here.txt
archive/prompts/: prompts_are_brewing.md
archive/web/app/: layout.tsx
archive/web/components/: ErrorView.tsx  Header.tsx  IdeaForm.tsx  ProgressView.tsx
archive/web/styles/: globals.css
docs/: brand-identity.md  implementation-checklist.md
web/: next.config.js
(+35 files in other folders)
